--- a/src/kanban/kanban.html
+++ b/src/kanban/kanban.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Kanban</title>
 		<meta charset="utf-8">
@@ -20,10 +20,10 @@
 			<div class="user-menu">
 				<div class="user-menu__panel">
 					<div class="user-menu__avatar">
-						<img src="useravatar.svg" width="40" height="40" alt = "" class="user-menu__avatar-icon">
+						<img src="useravatar.svg" width="40" height="40" alt = "avatar" class="user-menu__avatar-icon">
 					</div>
 					<div class="user-menu__arrow-icon">
-						<img src="arrowdown.svg" alt = "" width="24" height="24" class="user-menu__arrow-icon_rotate"></img>
+						<img src="arrowdown.svg" alt = "show/hide menu" width="24" height="24" class="user-menu__arrow-icon_rotate">
 					</div>
 				</div>
 			</div>
@@ -37,6 +37,6 @@
 			</div>
 			<div class="user-info">Kanban board by <span class="user-info__name">&lt;NAME&gt;</span>, <span class="user-info__year">&lt;YEAR&gt;</span></div>
 		</footer>
+		<script src="menu.js"></script>
 	</body>
-	<script type="text/javascript" src="menu.js"></script>
 </html>
