--- a/src/ex12_js_dom/task-01.html
+++ b/src/ex12_js_dom/task-01.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Slider</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="slider.css">
+		<link rel="stylesheet" type="text/css" href="task-01.css">
 	</head>
 	<body>
 		<header class="header">My slider</header>
@@ -20,6 +20,6 @@
 			</div>
 		</main>
 		<footer class="footer"></footer>
-		<script src="slider.js"></script>
+		<script src="task-01.js"></script>
 	</body>
 </html>
