Fixed names and labels, add type for button

--- a/src/ex9_html-css-fundamentals-part1/task-03.html
+++ b/src/ex9_html-css-fundamentals-part1/task-03.html
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="task-03.css">
 	</head>
 	<body>
-		<div id = "externalDiv">
-			<div id = "mediumDiv">
-				<div id = "innerDiv">
+		<div id = "button">
+			<div id = "buttonInnerBorder">
+				<div id = "buttonLabel">
 					<span>CHECKOUT</span>
 				</div>
 			</div>
