--- a/src/ex9_html-css-fundamentals-part1/task-04.html
+++ b/src/ex9_html-css-fundamentals-part1/task-04.html
@@ -6,10 +6,10 @@
 		<link rel="stylesheet" type="text/css" href="task-04.css">
 	</head>
 	<body>
-		<div id="topDivFirstMethod" class="top"></div>
-		<div id="middleDivFirstMethod" class="middle"></div>
-		<div id="lowDivFirstMethod" class="low"></div>
-		<div id="divSecondMethod" class="top"></div>	
-		<div id="divThirdMethod" class="top"></div>	
+		<div class="threeDivsMethod" id="top"></div>
+		<div class="threeDivsMethod" id="middle"></div>
+		<div class="threeDivsMethod" id="low"></div>
+		<div class="boxShadowMethod"></div>	
+		<div class="pseudoElementsMethod"></div>	
 	</body>
 </html>
