--- a/src/ex11_html-css-advanced/task-01.html
+++ b/src/ex11_html-css-advanced/task-01.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="loader"></div>
 		<div class="platform"></div>
-		<div class="spaceforcircle">
+		<div class="spaceForCircle">
 			<div class="circle"></div>	
 		</div>
 		<div class="platform"></div>
