Deleted imgs from html, fixed names and colors

--- a/src/ex12_js_dom/task-01.html
+++ b/src/ex12_js_dom/task-01.html
@@ -9,14 +9,9 @@
 		<header class="header">My slider</header>
 		<main class="main">
 			<div class="slider">
-				<button id = "left" class="button"><span class ="button__label">Previous</span></button>
-				<div class="slider__picarea">
-					<img src="asset/1.jpg" alt="" class="slider__image">
-					<img src="asset/2.jpg" alt="" class="slider__image">
-					<img src="asset/3.jpg" alt="" class="slider__image">
-					<img src="asset/4.jpg" alt="" class="slider__image">
-				</div>
-				<button id = "right" class="button"><span class ="button__label">Next</span></button>
+				<button id = "left" class="button"><div class ="button__label">Previous</div></button>
+				<div class="slider__picarea"></div>
+				<button id = "right" class="button"><div class ="button__label">Next</div></button>
 			</div>
 		</main>
 		<footer class="footer"></footer>
