Added animation instead of svg style, made button and menu header

--- a/src/kanban/kanban.html
+++ b/src/kanban/kanban.html
@@ -13,12 +13,11 @@
 			<div class="app-logo__title">Awesome Kanban Board</div>
 		</div>
 		<div class="userpanel">
-			<div class="create-new-list">
-				<object type="image/svg+xml" data="icons/addnew.svg" width="24" height="24"
+			<button class="create-new-list">
+				<img src="icons/addnew.svg" width="24" height="24" alt="addnew"
 					class="create-new-list__icon">
-				</object>
 				<div class="create-new-list__text">Create new list</div>
-			</div>
+			</button>
 			<div class="user-menu">
 				<div class="user-menu__panel">
 					<div class="user-menu__avatar">
