Fixed alt descriptions

--- a/src/kanban/kanban.html
+++ b/src/kanban/kanban.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="userpanel">
 			<button class="create-new-list">
-				<img src="icons/addnew.svg" width="24" height="24" alt="addnew"
+				<img src="icons/addnew.svg" width="24" height="24" alt="add new list icon"
 					class="create-new-list__icon">
 				<div class="create-new-list__text">Create new list</div>
 			</button>
@@ -25,7 +25,7 @@
 							class="user-menu__avatar-icon">
 					</div>
 					<div class="user-menu__arrow-icon">
-						<img src="icons/arrowdown.svg" alt="show/hide menu" width="24" height="24"
+						<img src="icons/arrowdown.svg" alt="show/hide menu icon" width="24" height="24"
 							class="user-menu__arrow-icon_rotate">
 					</div>
 				</div>
