Added ex17 homework: reorganized files, added readme

--- a/src/kanban/index.html
+++ b/src/kanban/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Kanban</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="kanban.css">
+	<link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 <body>
 	<header class="header">
@@ -14,18 +14,18 @@
 		</div>
 		<div class="userpanel">
 			<button class="create-new-list">
-				<img src="icons/addnew.svg" width="24" height="24" alt="add new list icon"
+				<img src="src/icons/addnew.svg" width="24" height="24" alt="add new list icon"
 					class="create-new-list__icon">
 				<div class="create-new-list__text">Create new list</div>
 			</button>
 			<div class="user-menu">
 				<div class="user-menu__panel">
 					<div class="user-menu__avatar">
-						<img src="icons/useravatar.svg" width="40" height="40" alt="avatar"
+						<img src="src/icons/useravatar.svg" width="40" height="40" alt="avatar"
 							class="user-menu__avatar-icon">
 					</div>
 					<div class="user-menu__arrow-icon">
-						<img src="icons/arrowdown.svg" alt="show/hide menu icon" width="24" height="24"
+						<img src="src/icons/arrowdown.svg" alt="show/hide menu icon" width="24" height="24"
 							class="user-menu__arrow-icon_rotate">
 					</div>
 				</div>
@@ -44,7 +44,7 @@
 		<div class="user-info">Kanban board by <span class="user-info__name">&lt;NAME&gt;</span>, <span
 				class="user-info__year">&lt;YEAR&gt;</span></div>
 	</footer>
-	<script src="scripts/menu.js"></script>
-	<script src="scripts/tasks.js"></script>
+	<script src="src/scripts/menu.js"></script>
+	<script src="src/scripts/tasks.js"></script>
 </body>
 </html>
